# minemap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README-minecraft.md  README.md  copy-mingw64-dll.sh  minemap.sln
.ci/: linux-mingw.sh
.github/workflows/: ci.yml
cmake/: GenColorBook.cmake  GenColorMaps.cmake  MinGWCross.cmake  ParseColorMaps.cmake  graphicsmagic-mingw-w64.patch
misc/: .gitignore  CMakeLists.txt  Makefile.palette  gen_color_map.c  gen_color_map.cpp  gen_color_map.py  gen_gimp_palette.cpp  gen_gimp_palette.py  rgb-base-1.12.txt  rgb-base-1.16.txt  rgb-base-1.17.txt  rgb-base-1.8.txt  rgba-1.12.txt  rgba-1.16.txt  rgba-1.17.txt  rgba-1.8.txt
po/: CMakeLists.txt  ja_JP.po  messages.pot  zh_CN.po
src/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  GZStream.h  Map.cpp  Map.h  Marker.cpp  Marker.h  VersionSpec.cpp  VersionSpec.h  common.h  constants.h  endian.h  libminemap.cpp  libminemap.h  mc_color.h  mc_endian.c  mc_endian.h  mc_map.c  mc_map.h  mc_nbt.c  mc_nbt.h  minemap.c  minemap.cpp  minemarker.cpp  pamenim.c  pamenim.cpp  utils.c  utils.cpp  utils.h
src/tests/: CMakeLists.txt  harness.cpp  test_helpers.cpp  test_helpers.h  unit_text.cpp
test-images/: CMakeLists.txt  apt1.json  apt1.nbt  apt2.json  apt2.nbt  marker-replace.json  marker-replace.nbt  pixels1.json  verify.py
tests/: .gitignore  CMakeLists.txt  endian_t1.c  endian_t2.c  generate_byte_array_t1.c  generate_byte_t1.c  generate_int_t1.c  generate_short_t1.c
vs-gen-color-map/: vs-gen-color-map.vcxproj  vs-gen-color-map.vcxproj.filters
vs-minemap/: packages.config  vs-minemap.vcxproj  vs-minemap.vcxproj.filters
vs-pamenim/: vs-pamenim.vcxproj  vs-pamenim.vcxproj.filters
