file(GLOB PO_FILES "*.po")

foreach(PO_FILE ${PO_FILES})
    GET_FILENAME_COMPONENT(LANG ${PO_FILE} NAME_WE)
    GETTEXT_PROCESS_PO_FILES(${LANG} ALL PO_FILES ${PO_FILE})
    INSTALL(
            FILES ${CMAKE_CURRENT_BINARY_DIR}/${LANG}.gmo
            DESTINATION ${CMAKE_INSTALL_FULL_LOCALEDIR}/${LANG}/LC_MESSAGES
            RENAME ${PROJECT_NAME}.mo
    )
endforeach()