set(BASE_FILES ../src/mc_nbt.c ../src/mc_map.c ../src/utils.c ../src/mc_endian.c)

include_directories(../src)

add_executable(endian_t1 endian_t1.c ${BASE_FILES})
add_executable(endian_t2 endian_t2.c ${BASE_FILES})
add_executable(generate_byte_t1 generate_byte_t1.c ${BASE_FILES})
add_executable(generate_short_t1 generate_short_t1.c ${BASE_FILES})
add_executable(generate_int_t1 generate_int_t1.c ${BASE_FILES})
add_executable(generate_byte_array_t1 generate_byte_array_t1.c ${BASE_FILES})
add_test(endian_test_1 endian_t1)
add_test(endian_test_2 endian_t2)
add_test(generate_byte_test_1 generate_byte_t1)
add_test(generate_short_test_1 generate_short_t1)
add_test(generate_int_test_1 generate_int_t1)
add_test(generate_byte_array_test_1, generate_byte_array_t1)
